--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Smart Faculty Tracker - Home</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Style.css">
 </head>
 <body class="home-body">
   <h1>Welcome to Smart Faculty Tracker</h1>
