--- a/aiml.html
+++ b/aiml.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>AIML Faculty</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Style.css">
 </head>
 <body>
   <h1>AIML Department Faculty</h1>
